Add spec tests + coverage (#2)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,22 @@ jobs:
         run: |
           go mod download
           go install github.com/onsi/ginkgo/v2/ginkgo@latest
+          go install github.com/mattn/goveralls@latest
 
       - name: 4️⃣ Run tests 🧪
         run: |
           ginkgo ./...
 
-      - name: 5️⃣ Bump version 🔢
+      - name: 5️⃣ Send coverage 📊
+        if: github.ref == 'refs/heads/main'
+        env:
+          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          mkdir dist
+          go test -race -covermode atomic -coverprofile=dist/covprofile ./...
+          goveralls -coverprofile=dist/covprofile -service=github
+
+      - name: 6️⃣ Bump version 🔢
         if: github.ref == 'refs/heads/main'
         id: update_version
         run: |
@@ -42,20 +52,20 @@ jobs:
           echo $NEXT_VERSION > .release/package_version
           echo "VERSION=v$NEXT_VERSION" >> $GITHUB_OUTPUT
 
-      - name: 6️⃣ Get version info 📝
+      - name: 7️⃣ Get version info 📝
         id: version_info
         run: |
           body=$(git log -1 --pretty=%B | sed -n '1p')
           echo "BODY=$body" >> $GITHUB_OUTPUT
 
-      - name: 7️⃣ Commit and push version 📤
+      - name: 8️⃣ Commit and push version 📤
         if: github.ref == 'refs/heads/main'
         uses: devops-infra/action-commit-push@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           commit_message: Update to version ${{ steps.update_version.outputs.VERSION }} [skip-ci]
 
-      - name: 8️⃣ Create Release 📦
+      - name: 9️⃣ Create Release 📦
         if: github.ref == 'refs/heads/main'
         id: create_release
         uses: softprops/action-gh-release@v2
@@ -68,7 +78,7 @@ jobs:
           draft: false
           prerelease: true
 
-      - name: 9️⃣ Notify pkg.go.dev 🔔
+      - name: 🔟 Notify pkg.go.dev 🔔
         if: github.ref == 'refs/heads/main'
         run: |
           curl -sSf https://proxy.golang.org/github.com/haimkastner/gleece/@v/${{ steps.update_version.outputs.VERSION }}.info || echo "Failed to notify pkg.go.dev"
