Aligning to new repo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,4 +81,4 @@ jobs:
       - name: 🔟 Notify pkg.go.dev 🔔
         if: github.ref == 'refs/heads/main'
         run: |
-          curl -sSf https://proxy.golang.org/github.com/haimkastner/gleece/@v/${{ steps.update_version.outputs.VERSION }}.info || echo "Failed to notify pkg.go.dev"
+          curl -sSf https://proxy.golang.org/github.com/gopher-fleece/gleece/@v/${{ steps.update_version.outputs.VERSION }}.info || echo "Failed to notify pkg.go.dev"
