--- a/gleece.config.json
+++ b/gleece.config.json
@@ -15,6 +15,7 @@
 		}
 	},
 	"openAPIGeneratorConfig": {
+		"openapi" : "3.0.0",
 		"info": {
 			"title": "Sample API",
 			"description": "This is a sample API",
