Fix E2E te4st flow

--- a/e2e/gin/gin.e2e.gleece.config.json
+++ b/e2e/gin/gin.e2e.gleece.config.json
@@ -7,7 +7,7 @@
 	},
 	"routesConfig": {
 		"engine": "gin",
-		"outputPath": "./dist/gin.e2e.gleece.go",
+		"outputPath": "./routes/gin.e2e.gleece.go",
 		"outputFilePerms": "0644",
 		"authorizationConfig": {
 			"authFileFullPackageName": "github.com/gopher-fleece/gleece/e2e/gin/auth",
