--- a/e2e/echo/echo.e2e.gleece.config.json
+++ b/e2e/echo/echo.e2e.gleece.config.json
@@ -7,7 +7,7 @@
 	},
 	"routesConfig": {
 		"engine": "echo",
-		"outputPath": "./dist/echo.e2e.gleece.go",
+		"outputPath": "./routes/echo.e2e.gleece.go",
 		"outputFilePerms": "0644",
 		"authorizationConfig": {
 			"authFileFullPackageName": "github.com/gopher-fleece/gleece/e2e/echo/auth",
