--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
           go install github.com/mattn/goveralls@latest
 
       - name: 4️⃣ Run tests 🧪
+        if: github.ref != 'refs/heads/main'
         run: |
           ginkgo ./...
 
@@ -31,6 +32,6 @@ jobs:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdir dist
-          go test -race -covermode atomic -coverprofile=dist/covprofile ./...
+          go test -covermode atomic -coverprofile=dist/covprofile ./...
           goveralls -coverprofile=dist/covprofile -service=github
 
