--- a/e2e/gin/gin.e2e.gleece.config.json
+++ b/e2e/gin/gin.e2e.gleece.config.json
@@ -15,7 +15,14 @@
 		},
 		"templateOverrides": {
 			"ResponseHeaders" : "./assets/gin.custom.response.headers.hbs"
-		}
+		},
+		"customValidators" : [
+			{
+				"validateTagName": "validate_starts_with_letter",
+				"functionName": "ValidateStartsWithLetter",
+				"fullPackageName": "github.com/gopher-fleece/gleece/e2e/assets"
+			}
+		]
 	},
 	"openAPIGeneratorConfig": {
 		"openapi" : "3.0.0",
