--- a/e2e/echo.e2e.gleece.config.json
+++ b/e2e/echo.e2e.gleece.config.json
@@ -22,6 +22,28 @@
 				"functionName": "ValidateStartsWithLetter",
 				"fullPackageName": "github.com/gopher-fleece/gleece/e2e/assets"
 			}
+		],
+		"middlewares": [
+			{
+				"fullPackageName": "github.com/gopher-fleece/gleece/e2e/echo/middlewares",
+				"execution": "beforeOperation",
+				"functionName": "MiddlewareBeforeOperation"
+			},
+			{
+				"fullPackageName": "github.com/gopher-fleece/gleece/e2e/echo/middlewares",
+				"execution": "afterSucceedOperation",
+				"functionName": "MiddlewareAfterSucceedOperation"
+			},
+			{
+				"fullPackageName": "github.com/gopher-fleece/gleece/e2e/echo/middlewares",
+				"execution": "onError",
+				"functionName": "MiddlewareOnError"
+			},
+			{
+				"fullPackageName": "github.com/gopher-fleece/gleece/e2e/echo/middlewares",
+				"execution": "onError",
+				"functionName": "MiddlewareOnError2"
+			}
 		]
 	},
 	"openAPIGeneratorConfig": {
