Simplify default security configuration - allow one check only

--- a/e2e/gin.e2e.gleece.config.json
+++ b/e2e/gin.e2e.gleece.config.json
@@ -80,18 +80,12 @@
 				"in": "header"
 			}
 		],
-		"defaultSecurity": [
-			{
-				"securityMethod": [
-					{
-						"name": "securitySchemaName2",
-						"scopes": [
-							"config"
-						]
-					}
-				]
-			}
-		],
+		"defaultSecurity": {
+			"name": "securitySchemaName2",
+			"scopes": [
+				"config"
+			]
+		},
 		"specGeneratorConfig": {
 			"outputPath": "./gin/dist/swagger.json"
 		}
