--- a/test/errorhandling/gleece.broken.json.config
+++ b/test/errorhandling/gleece.broken.json.config
@@ -41,19 +41,13 @@
 				"in": "header"
 			}
 		],
-		"defaultSecurity": [
-			{
-				"securityMethod": [
-					{
+		"defaultSecurity": {
 						"name": "sanitySchema",
 						"scopes": [
 							"read",
 							"write"
 						]
-					}
-				]
-			}
-		],
+					},
 		"specGeneratorConfig": {
 			"outputPath": "./dist/swagger.json"
 		}
