--- a/gleece.config.json
+++ b/gleece.config.json
@@ -41,19 +41,13 @@
 				"in": "header"
 			}
 		],
-		"defaultSecurity": [
-			{
-				"securityMethod": [
-					{
-						"name": "securitySchemaName",
-						"scopes": [
-							"read",
-							"write"
-						]
-					}
-				]
-			}
-		],
+		"defaultSecurity": {
+			"name": "securitySchemaName",
+			"scopes": [
+				"read",
+				"write"
+			]
+		},
 		"specGeneratorConfig": {
 			"outputPath": "./dist/swagger.json"
 		}
