--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,17 @@ jobs:
       - name: 1️⃣ Checkout repository 🛎️
         uses: actions/checkout@v4
 
-      # Cache Go modules
-      - name: Cache Go modules 🗄️
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/go/pkg/mod
-            ~/.cache/go-build
-            ~/go/bin
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+      # # Cache Go modules
+      # - name: Cache Go modules 🗄️
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: |
+      #       ~/go/pkg/mod
+      #       ~/.cache/go-build
+      #       ~/go/bin
+      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-go-
 
       - name: 2️⃣ Set up Go 🚀
         uses: actions/setup-go@v5
@@ -36,7 +36,6 @@ jobs:
       - name: 4️⃣ Run tests 🧪
         if: github.ref != 'refs/heads/main'
         run: |
-          go mod tidy
           ginkgo ./...
 
       - name: 5️⃣ Send coverage 📊
@@ -44,7 +43,6 @@ jobs:
         env:
           COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          go mod tidy
           mkdir dist
           go test -covermode atomic -coverpkg=$(go list ./... | grep -vE "/test/|/e2e/" | tr '\n' ',') -coverprofile=dist/covprofile ./...
           goveralls -coverprofile=dist/covprofile -service=github
