--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,17 @@ jobs:
       - name: 1️⃣ Checkout repository 🛎️
         uses: actions/checkout@v4
 
-      # # Cache Go modules
-      # - name: Cache Go modules 🗄️
-      #   uses: actions/cache@v3
-      #   with:
-      #     path: |
-      #       ~/go/pkg/mod
-      #       ~/.cache/go-build
-      #       ~/go/bin
-      #     key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-go-
+      # Cache Go modules
+      - name: Cache Go modules 🗄️
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+            ~/go/bin
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
       - name: 2️⃣ Set up Go 🚀
         uses: actions/setup-go@v5
