--- a/e2e/e2e.gin.gleece.config.json
+++ b/e2e/e2e.gin.gleece.config.json
@@ -15,6 +15,9 @@
 		},
 		"templateOverrides": {
 			"ResponseHeaders" : "./gin/assets/gin.custom.response.headers.hbs"
+		},
+		"templateExtensions": {
+			"RouteEndRoutesExtension" : "./gin/assets/gin.end.route.extension.hbs"
 		}
 	},
 	"openAPIGeneratorConfig": {
