--- a/e2e/e2e.fiber.gleece.config.json
+++ b/e2e/e2e.fiber.gleece.config.json
@@ -20,7 +20,7 @@
 			"RouteEndRoutesExtension" : "./fiber/assets/fiber.end.route.extension.hbs"
 		}
 	},
-	"openAPIGeneratorConfig": {
+	"openapiGeneratorConfig": {
 		"openapi" : "3.0.0",
 		"info": {
 			"title": "Sample API",
