--- a/e2e/e2e.mux.gleece.config.json
+++ b/e2e/e2e.mux.gleece.config.json
@@ -18,7 +18,8 @@
 		},
 		"templateExtensions": {
 			"RouteEndRoutesExtension" : "./mux/assets/mux.end.route.extension.hbs"
-		}
+		},
+		"validateResponsePayload": true
 	},
 	"openapiGeneratorConfig": {
 		"openapi" : "3.0.0",
