--- a/e2e/e2e.gin.gleece.config.json
+++ b/e2e/e2e.gin.gleece.config.json
@@ -1,8 +1,7 @@
 {
 	"commonConfig": {
 		"controllerGlobs": [
-			"./assets/*.go",
-			"./assets/**/*.go"
+			"./assets/e2e.controller.go"
 		]
 	},
 	"routesConfig": {
@@ -77,5 +76,9 @@
 		"specGeneratorConfig": {
 			"outputPath": "./gin/dist/swagger.json"
 		}
+	},
+	"experimentalConfig": {
+		"validateTopLevelOnlyEnum": true,
+		"generateEnumValidator": true
 	}
 }
