Allow Skip Generated date in generated routes comment

--- a/e2e/e2e.chi.gleece.config.json
+++ b/e2e/e2e.chi.gleece.config.json
@@ -31,7 +31,8 @@
 			"JsonErrorResponseExtension": "./chi/assets/JsonErrorResponseExtension.hbs",
 			"ResponseHeadersExtension": "./chi/assets/ResponseHeadersExtension.hbs"
 		},
-		"validateResponsePayload": true
+		"validateResponsePayload": true,
+		"skipGenerateDateComment": true
 	},
 	"openapiGeneratorConfig": {
 		"openapi": "3.0.0",
